Correction version 11.0  and code syntax
Move App to iOS11
RealmSwift podfile version '>= 3.17.3'
Changed func changeMapType to switch syntax
changed class name "MuralRealm" to "MuralPersistentData"

--- a/MMurals/Views/Base.lproj/Main.storyboard
+++ b/MMurals/Views/Base.lproj/Main.storyboard
@@ -212,6 +212,6 @@
         <image name="compass" width="300" height="300"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="phO-Ca-qVn"/>
+        <segue reference="Ruj-6O-G9j"/>
     </inferredMetricsTieBreakers>
 </document>
